--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
         "@angular/cli": "~10.0.0",
         "@angular/compiler-cli": "^10.0.2",
         "@angular/language-service": "^7.2.16",
+        "@linnenschmidt/build-ng-packagr": "^9.0.0",
         "@types/jasmine": "^3.5.11",
         "@types/jasminewd2": "^2.0.8",
         "@types/node": "^14.0.14",
@@ -65,7 +66,7 @@
         "karma-coverage-istanbul-reporter": "^2.1.1",
         "karma-jasmine": "^3.3.1",
         "karma-jasmine-html-reporter": "^1.5.4",
-        "ng-packagr": "^10.0.0",
+        "ng-packagr": "^10.1.0",
         "protractor": "^7.0.0",
         "rxjs-tslint": "^0.1.8",
         "ts-node": "^8.10.2",
